examples/type_system/failing/100_unclosed_string_recovery.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let label = "The answer
let after = 1
print(after)
